@@ -202,3 +202,9 @@
 
 (deny mach-lookup (with no-log)
        (global-name "com.apple.coreservices.appleevents"))
+
+#if __MAC_OS_X_VERSION_MIN_REQUIRED >= 1090
+// FIXME: This should be removed, see <rdar://problem/12976385>.
+(deny file-write-create (with no-log)
+       (home-literal "/Library/Caches/com.apple.WebKit2.WebProcessService"))
+#endif
